# nature-rs

./: Cargo.toml  README.MD  TODO.MD
src/: main.rs  nature_errors.rs
src/nature_common/: mod.rs  nature_errors.rs
src/nature_gp/: README.MD  XY.MD  XYZ.MD  ax1.rs  ax2.rs  ax22d.rs  ax2d.rs  ax3.rs  circ.rs  circ2d.rs  cone.rs  cylinder.rs  dir.rs  dir2d.rs  elips.rs  elips2d.rs  euler_sequence.rs  gp.rs  gtrsf.rs  gtrsf2d.rs  hypr.rs  hypr2d.rs  line.rs  line2d.rs  mat.rs  mat2d.rs  mod.rs  parab.rs  parab2d.rs  plane.rs  point2d.rs  point3d.rs  quaternion.rs  quaternion_lerp.rs  sphere.rs  torus.rs  trsf.rs  trsf2d.rs  trsf_form.rs  trsf_nlerp.rs  (+6 more)
