[package]
name = "nature-rs"
version = "0.0.1"
edition = "2024"
authors = ["MuhammadMNorouzi@gmail.com>"]
description = "Blackbox"
license = "MIT"
readme = "README.md"
repository = "https://github.com/muhammadmnorouzi/nature-rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
